# src/OpenApi/openapi.json
@@ -851,14 +851,7 @@
             "required": true,
             "schema": {
               "type": "string",
-              "enum": [
-                "PENDING",
-                "PLACED",
-                "CONFIRMED",
-                "SHIPPED",
-                "DELIVERED",
-                "CANCELLED"
-              ]
+              "enum": ["PENDING", "PLACED", "CONFIRMED", "SHIPPED", "DELIVERED", "CANCELLED"]
             }
           }
         ],
@@ -962,14 +955,7 @@
             "required": true,
             "schema": {
               "type": "string",
-              "enum": [
-                "PENDING_VERIFICATION",
-                "ACTIVE",
-                "SUSPENDED",
-                "DEACTIVATED",
-                "BANNED",
-                "CLOSED"
-              ]
+              "enum": ["PENDING_VERIFICATION", "ACTIVE", "SUSPENDED", "DEACTIVATED", "BANNED", "CLOSED"]
             }
           }
         ],
@@ -1113,7 +1099,7 @@
     "/seller/report": {
       "get": {
         "tags": ["seller-controller"],
-        "operationId": "getSellerByReport",
+        "operationId": "getSellerReportBySeller",
         "responses": {
           "200": {
             "description": "OK",
@@ -1186,14 +1172,7 @@
             "required": false,
             "schema": {
               "type": "string",
-              "enum": [
-                "PENDING_VERIFICATION",
-                "ACTIVE",
-                "SUSPENDED",
-                "DEACTIVATED",
-                "BANNED",
-                "CLOSED"
-              ]
+              "enum": ["PENDING_VERIFICATION", "ACTIVE", "SUSPENDED", "DEACTIVATED", "BANNED", "CLOSED"]
             }
           }
         ],
@@ -1506,7 +1485,7 @@
     "/api/transaction": {
       "get": {
         "tags": ["transaction-controller"],
-        "operationId": "getAllTransaction",
+        "operationId": "getAllTransactions",
         "responses": {
           "200": {
             "description": "OK",
@@ -1527,7 +1506,7 @@
     "/api/transaction/seller": {
       "get": {
         "tags": ["transaction-controller"],
-        "operationId": "getTransactionBySeller",
+        "operationId": "getTransactionsBySeller",
         "responses": {
           "200": {
             "description": "OK",
@@ -1916,14 +1895,7 @@
           },
           "orderStatus": {
             "type": "string",
-            "enum": [
-              "PENDING",
-              "PLACED",
-              "CONFIRMED",
-              "SHIPPED",
-              "DELIVERED",
-              "CANCELLED"
-            ]
+            "enum": ["PENDING", "PLACED", "CONFIRMED", "SHIPPED", "DELIVERED", "CANCELLED"]
           },
           "totalItem": {
             "type": "integer",
@@ -2125,14 +2097,7 @@
           },
           "accountStatus": {
             "type": "string",
-            "enum": [
-              "PENDING_VERIFICATION",
-              "ACTIVE",
-              "SUSPENDED",
-              "DEACTIVATED",
-              "BANNED",
-              "CLOSED"
-            ]
+            "enum": ["PENDING_VERIFICATION", "ACTIVE", "SUSPENDED", "DEACTIVATED", "BANNED", "CLOSED"]
           },
           "lastSignOut": {
             "type": "string",
@@ -2144,8 +2109,8 @@
           "emailVerified": {
             "type": "boolean"
           },
-          "signedOut": {
-            "type": "boolean"
+          "username": {
+            "type": "string"
           },
           "authorities": {
             "type": "array",
@@ -2153,8 +2118,8 @@
               "$ref": "#/components/schemas/GrantedAuthority"
             }
           },
-          "username": {
-            "type": "string"
+          "signedOut": {
+            "type": "boolean"
           },
           "vat": {
             "type": "string"
@@ -2264,8 +2229,8 @@
           "name": {
             "type": "string"
           },
-          "signedOut": {
-            "type": "boolean"
+          "username": {
+            "type": "string"
           },
           "authorities": {
             "type": "array",
@@ -2273,8 +2238,8 @@
               "$ref": "#/components/schemas/GrantedAuthority"
             }
           },
-          "username": {
-            "type": "string"
+          "signedOut": {
+            "type": "boolean"
           },
           "credentialsNonExpired": {
             "type": "boolean"
@@ -2743,12 +2708,7 @@
           },
           "section": {
             "type": "string",
-            "enum": [
-              "ELECTRIC_CATEGORIES",
-              "GRID",
-              "SHOP_BY_CATEGORIES",
-              "DEALS"
-            ]
+            "enum": ["ELECTRIC_CATEGORIES", "GRID", "SHOP_BY_CATEGORIES", "DEALS"]
           }
         }
       },
@@ -3083,13 +3043,13 @@
       "PageProduct": {
         "type": "object",
         "properties": {
-          "totalPages": {
-            "type": "integer",
-            "format": "int32"
-          },
           "totalElements": {
             "type": "integer",
             "format": "int64"
+          },
+          "totalPages": {
+            "type": "integer",
+            "format": "int32"
           },
           "size": {
             "type": "integer",
@@ -3142,16 +3102,16 @@
               "$ref": "#/components/schemas/SortObject"
             }
           },
-          "paged": {
-            "type": "boolean"
+          "pageSize": {
+            "type": "integer",
+            "format": "int32"
           },
           "pageNumber": {
             "type": "integer",
             "format": "int32"
           },
-          "pageSize": {
-            "type": "integer",
-            "format": "int32"
+          "paged": {
+            "type": "boolean"
           },
           "unpaged": {
             "type": "boolean"
